# topic-service

./: .gitignore  CHANGELOG.md  README.md  stack.yaml  topic-service.cabal
app/: Main.hs  Main_2.hs
src/: LDA.hs
src/Data/: Defaults.hs
src/Numeric/: Gamma.hs  Psi.hs  Solve.hs  Utils.hs  Zeta.hs
src/Stats/: Gamma.hs  Psi.hs
src/Topics/: LDA.hs  SHDP.hs  Vocab.hs
test/: Spec.hs
tests/: Tests.hs
tests/Tests/: Gamma.hs  Psi.hs  Solve.hs  Zeta.hs
