cabal-version:       2.4

name:                topic-service
version:             0.0.0.1
license:             GPL-2.0-only
license-file:        LICENSE
author:              Eemeli Saari
maintainer:          saari.eemeli@gmail.com
category:            Web
extra-source-files:  README.md, CHANGELOG.md

library
  exposed-modules:
    Topics.Lda
    Topics.SHdp
    Topics.Vocab
    Numeric.Psi
    Numeric.Gamma
    Numeric.Solve
    Numeric.Zeta
    Numeric.Utils
    Data.Defaults
    Stats.Gamma
  build-depends:
    base ^>=4.12.0.0,
    mtl >= 2.2,
    matrix >= 0.3.6.1,
    vector >= 0.12.0.3,
    containers >= 0.6.0.1,
    mwc-random >= 0.14.0.0,
    random >= 1.2.0,
    loch-th >= 0.2.2,
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable topic-service
  main-is:             Main.hs
  build-depends:  
    base >= 4.12.0.0,
    mtl >= 2.2,
    topic-service
  hs-source-dirs:      app
  default-language:    Haskell2010
