cabal-version:       2.4

name:                topic-service
version:             0.0.0.1
license:             GPL-2.0-only
license-file:        LICENSE
author:              Eemeli Saari
maintainer:          saari.eemeli@gmail.com
category:            Web
extra-source-files:  README.md, CHANGELOG.md
Build-Type:          Simple

library
  exposed-modules:
    Topics.Lda
    Topics.SHdp
    Topics.Vocab
    Numeric.Psi
    Numeric.Gamma
    Numeric.Solve
    Numeric.Zeta
    Numeric.Utils
    Data.Defaults
  build-depends:
    base >=4.12.0.0,
    mtl >= 2.2,
    matrix >= 0.3.6.1,
    vector >= 0.12.0.3,
    containers >= 0.6.0.1,
    mwc-random >= 0.14.0.0,
    pcg-random >= 0.1.3.7,
    random >= 1.2.0,
    loch-th >= 0.2.2,
    splitmix >= 0.1.0.3,
    statistics >= 0.15.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

executable topic-server
  main-is:             Main.hs
  build-depends:  
    base >= 4.12.0.0,
    random >= 1.2.0,
    mtl >= 2.2,
    topic-service
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  other-modules:
    Tests.Gamma
    Tests.Psi
    Tests.Solve
    Tests.Zeta
  build-depends:
    base >=4.12.0.0,
    QuickCheck >= 2.7.5,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-expected-failure,
    topic-service
  default-language:    Haskell2010
